k8s/hiitfigure-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hiitfigure-deployment
  labels:
    app: hiitfigure
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hiitfigure
  template:
    metadata:
      labels:
        app: hiitfigure
    spec:
      containers:
      - name: hiitfigure
        image: tranvannhan1911/hiitfigure
        ports:
        - containerPort: 8080
