k8s/hiitfigure-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiitfigure-service
spec:
  selector:
    app: hiitfigure
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
