k8s/hiitfigure-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hiitfigure-deployment
  labels:
    app: hiitfigure
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hiitfigure
  template:
    metadata:
      labels:
        app: hiitfigure
    spec:
      containers:
      - name: hiitfigure
        image: tranvannhan1911/hiitfigure
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hiitfigure-service
spec:
  selector:
    app: hiitfigure
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hiitfigure-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hiitfigure.tranvannhan1911.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hiitfigure-service
            port:
              number: 8080
